Fix overflow when animate nav menu by add overflow-x clip with position relative

--- a/css/style.css
+++ b/css/style.css
@@ -347,6 +347,9 @@
 
   .site-header {
     padding-block: 1rem;
+
+    overflow-x: clip;
+    position: relative;
   }
   .site-header__inner {
     display: flex;
